# clinical_trials_query_to_visualization_agent

./: .env.example  .gitignore  ClinicalTrials_Query_to_Visualization_Agent_Backend.docx  README.md  pyproject.toml
app/: main.py
app/agent/: __init__.py  advanced_filter_validator.py  api_caller.py  exceptions.py  intent_filter_sanitizer.py  intent_parser.py  llm.py  pipeline.py  prompts.py  query_normalizer.py  query_planner.py  response_builder.py  transform_wiring.py  types.py  viz_selector.py
app/api/: dependencies.py  errors.py
app/core/: config.py
app/domain/: __init__.py  horizons.py  models.py  visualization.py
app/services/: citation_engine.py  fetch.py
app/validation/: viz_compatibility.py
docs/: agent_design.md  horizon_matrix.md
docs/api/: enums.md  field_observations.md  metadata.md  search-areas.md  studies.md  study-by-nct-id.md
examples/: README.md  comparison_pembrolizumab_vs_nivolumab.json  distribution_breast_cancer_phase.json  geographic_lung_cancer_recruiting.json  network_diabetes_sponsor_drug.json  time_trend_pembrolizumab.json
examples/live/: comparison_pembrolizumab_vs_nivolumab.json  distribution_breast_cancer_phase.json  geographic_lung_cancer_recruiting.json  network_diabetes_sponsor_drug.json  time_trend_pembrolizumab.json
response_dumps/: README.md
scripts/: capture_horizon_fixtures.py  capture_raw_dumps.py  generate_examples.py  render_readme_example.py  render_sample_queries_section.py
tests/: conftest.py  test_capture_raw_dumps.py  test_examples_citations.py  test_horizon_fixtures.py
tests/agent/: conftest.py  test_advanced_filter_validator.py  test_api_caller.py  test_intent_filter_sanitizer.py  test_intent_llm.py  test_intent_parser.py  test_intent_prompt.py  test_pipeline.py  test_pipeline_e2e.py  test_query_normalizer.py  test_query_planner.py  test_response_builder.py  test_transform_wiring.py  test_types.py  test_viz_selector.py
ui/: app.py  client.py  render.py  samples.py
(+82 files in other folders)
