[project]
name = "clinicaltrials-agent"
version = "0.1.0"
description = "ClinicalTrials.gov query-to-visualization agent backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "httpx",
    "openai",
    "pydantic-settings",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-httpx",
    "ruff",
]
ui = [
    "streamlit>=1.32",
    "plotly>=5.18",
    "pyvis>=0.3",
    "pandas>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"scripts/capture_raw_dumps.py" = ["E402"]
"scripts/capture_horizon_fixtures.py" = ["E402"]
"scripts/generate_examples.py" = ["E402"]
